--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,8 @@
     cursor: pointer;
     border: none;
     background: none;
+    white-space: pre-line;
+
   }
   /* Vibración visual */
   @keyframes shake {
